Completed Basis Programming Projects Pages.

--- a/programming/java/batch-episode-renamer.html
+++ b/programming/java/batch-episode-renamer.html
@@ -15,11 +15,11 @@
 				<th>Version</th>
 				<th>Dependencies</th>
 				<th>Git Repository URI</th>
-			<tr/>
+			</tr>
 			<tr>
-				<td><a href="../../resources/java/batch-episode-renamer-1.0.0.jar">1.0.0 (Current)</a></td>
-				<td><a href="../../resources/java/krumreylib-0.0.1-SNAPSHOT.jar">Krumreylib 0.0.1</a></td>
-				<td>ssh://hermann@krumreyh.asuscomm.com:9001/mnt/Main/DATA/Git Repositories/Java/Batch Episode Renamer/</td>
+				<td><a href="../../resources/java/batch-episode-renamer-0.1.jar">0.1 (Current)</a></td>
+				<td><a href="../../resources/java/krumreylib-0.3.jar">Krumreylib 0.3</a></td>
+				<td>ssh://hermann@krumreyh.asuscomm.com:9002/mnt/Main/Programming/Git Repositories/Java/Batch Episode Renamer</td>
 			</tr>
 		</table>
 	</body>
