--- a/programming/java/folder-icon-changer.html
+++ b/programming/java/folder-icon-changer.html
@@ -25,11 +25,11 @@
 				<th>Version</th>
 				<th>Dependencies</th>
 				<th>Git Repository URI</th>
-			<tr/>
+			</tr>
 			<tr>
-				<td><a href="../../resources/java/folder-icon-changer-0.0.1-SNAPSHOT.jar">0.0.1(Current)</a></td>
+				<td><a href="../../resources/java/folder-icon-changer-0.1.jar">0.1(Current)</a></td>
 				<td><a href="../../resources/java/krumreylib-0.0.1-SNAPSHOT.jar">Krumreylib 0.0.1</a></td>
-				<td>ssh://hermann@krumreyh.asuscomm.com:9001/mnt/Main/DATA/Git Repositories/Java/Folder Icon Changer/</td>
+				<td>ssh://hermann@krumreyh.asuscomm.com:9002/mnt/Main/Programming/Git Repositories/Java/Folder Icon Changer</td>
 			</tr>
 		</table>
 	</body>
