--- a/programming/java/krumreylib.html
+++ b/programming/java/krumreylib.html
@@ -6,7 +6,7 @@
 		<title>Krumreylib</title>
 	</head>
 	<body>
-		<h1>Krumreylib</h1>
+		<h1>Krumreylib / Krumrey Commons</h1>
 		<p>A Collection of classes and methods to streamline commonly used functions in a Java Program</p>
 		
 		<table>
@@ -14,11 +14,26 @@
 				<th>Version</th>
 				<th>Dependencies</th>
 				<th>Git Repository URI</th>
-			<tr/>
+			</tr>
 			<tr>
-				<td><a href="../../resources/java/krumreylib-0.0.1-SNAPSHOT.jar">0.0.1(Current)</a></td>
+				<td><a href="../../resources/java/krumreylib-0.0.1-SNAPSHOT.jar">0.0.1</a></td>
 				<td>---</td>
-				<td>ssh://hermann@krumreyh.asuscomm.com:9001/mnt/Main/DATA/Git Repositories/Java/Krumreylib/</td>
+				<td>ssh://hermann@krumreyh.asuscomm.com:9002/mnt/Main/Programming/Git Repositories/Java/Krumreylib</td>
+			</tr>
+			<tr>
+				<td><a href="../../resources/java/krumrey-commons-0.1.jar">0.1</a></td>
+				<td>---</td>
+				<td>ssh://hermann@krumreyh.asuscomm.com:9002/mnt/Main/Programming/Git Repositories/Java/Krumreylib</td>
+			</tr>
+			<tr>
+				<td><a href="../../resources/java/krumrey-commons-0.2.jar">0.2</a></td>
+				<td>---</td>
+				<td>ssh://hermann@krumreyh.asuscomm.com:9002/mnt/Main/Programming/Git Repositories/Java/Krumreylib</td>
+			</tr>
+			<tr>
+				<td><a href="../../resources/java/krumreylib-0.3.jar">0.3(Current)</a></td>
+				<td>---</td>
+				<td>ssh://hermann@krumreyh.asuscomm.com:9002/mnt/Main/Programming/Git Repositories/Java/Krumreylib</td>
 			</tr>
 		</table>
 	</body>
