Created First Article in Hermann's Tech Lab.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 		<p>HTML and CSS Project!</p>
 		<ul id="paddedTop">
 			<li><a href="programming/programming.html">Programming Projects</a></li>
-			<li><a href="http://la.krumreyh.com">Linear Algebra</a></li>	
+			<li><a href="http://la.krumreyh.com">Linear Algebra</a></li>
+			<li><a href="">Familienberichte</a></li>
+            <li><a href="techlab/current.html">Hermann's Tech Lab</a> </li>
 		</ul>
 	</body>
 </html>
