Imporved CSS style and added family reports.

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<h1>Welcome!</h1>
 		<p>This is Hermann Krumrey's personal little</p>
 		<p>HTML and CSS Project!</p>
-		<ul id="paddedTop">
+		<ul>
 			<li><a href="programming/programming.html">Programming Projects</a></li>
 			<li><a href="http://la.krumreyh.com">Linear Algebra</a></li>
-			<li><a href="">Familienberichte</a></li>
+			<li><a href="family_reports.html">Family Reports</a></li>
             <li><a href="techlab/current.html">Hermann's Tech Lab</a> </li>
 		</ul>
 	</body>
