Wrote article on XDCC Downloading.

--- a/techlab/all_articles.html
+++ b/techlab/all_articles.html
@@ -15,6 +15,11 @@
     </tr>
     <tr>
         <td>2015-08-19</td>
+        <td>Downloading Files via XDCC</td>
+        <td><a href="archive/2015-08-19-xdcc.html">View</a></td>
+    </tr>
+    <tr>
+        <td>2015-08-19</td>
         <td>Setting up a Raspberry Pi as an HTML server</td>
         <td><a href="archive/2015-08-19-raspberry_pi_setup.html">View</a></td>
     </tr>
@@ -28,6 +33,7 @@
         <td>Encrypting files with OpenSSL using public keys</td>
         <td><a href="archive/2015-08-18-openssl_encryption.html">View</a></td>
     </tr>
+
 </table>
 </body>
 </html>
