Wrote article on Nvidia Driver installation on Linux Mint.

--- a/techlab/all_articles.html
+++ b/techlab/all_articles.html
@@ -14,6 +14,11 @@
         <th>Link</th>
     </tr>
     <tr>
+        <td>2015-08-20</td>
+        <td>Installing proprietary Nvidia drivers on Linux Mint 17.2</td>
+        <td><a href="archive/2015-08-20-nvidia_linux.html">View</a></td>
+    </tr>
+    <tr>
         <td>2015-08-19</td>
         <td>Downloading Files via XDCC</td>
         <td><a href="archive/2015-08-19-xdcc.html">View</a></td>
