Wrote article on Rsync.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 		<h1>Welcome!</h1>
 		<p>This is Hermann Krumrey's personal little</p>
 		<p>HTML and CSS Project!</p>
-		<ul>
+		<ul class="ul_center">
 			<li><a href="programming/programming.html">Programming Projects</a></li>
 			<li><a href="http://la.krumreyh.com">Linear Algebra</a></li>
 			<li><a href="family_reports.html">Family Reports</a></li>
-            <li><a href="techlab/current.html">Hermann's Tech Lab</a> </li>
+            <li><a href="techlab/current.html">Hermann's Tech Lab</a></li>
+			<!--li><a href="sftp://hermann@192.168.1.2/mnt/Main">SFTP NAS Access</a></li-->
 		</ul>
 	</body>
 </html>
