Turned general Table CSS to a class.

--- a/family_reports.html
+++ b/family_reports.html
@@ -10,7 +10,7 @@
     <p>All family reports are encrypted using OpenSSL. To see how to decrypt the files, refer
         to <a href="techlab/archive/2015-08-18-openssl_encryption.html" class="link">this</a>.<br>
         For access to the keys, contact <a href="mailto:hermann@krumreyh.com" class="link">Hermann Krumrey</a></p>
-    <table>
+    <table class="center_table">
         <tr>
             <th>Language</th>
             <th>Year</th>
