--- a/programming/java/batch-episode-renamer.html
+++ b/programming/java/batch-episode-renamer.html
@@ -10,7 +10,7 @@
 		<p>A Program that enables fast renaming of TV show episodes in the format "Show Name - SXXEXX - Episode Name"</p>
 		<p>The Program has a GUI as well as CLI, the GUI loads by default, the CLI can be used via the -cli flag</p>
 
-		<table>
+		<table class="center_table">
 			<tr>
 				<th>Version</th>
 				<th>Dependencies</th>
