--- a/programming/java/krumreylib.html
+++ b/programming/java/krumreylib.html
@@ -9,7 +9,7 @@
 		<h1>Krumreylib / Krumrey Commons</h1>
 		<p>A Collection of classes and methods to streamline commonly used functions in a Java Program</p>
 		
-		<table>
+		<table class="center_table">
 			<tr>
 				<th>Version</th>
 				<th>Dependencies</th>
