--- a/techlab/all_articles.html
+++ b/techlab/all_articles.html
@@ -7,11 +7,16 @@
 </head>
 <body>
 <h1>Tech Lab Articles</h1>
-<table>
+<table class="center_table">
     <tr>
         <th>Date</th>
         <th>Topic</th>
         <th>Link</th>
+    </tr>
+    <tr>
+        <td>2015-08-20</td>
+        <td>Using Rsync for backing up or transferring files</td>
+        <td><a href="archive/2015-08-20-rsync.html">View</a></td>
     </tr>
     <tr>
         <td>2015-08-20</td>
