--- a/programming/programming.html
+++ b/programming/programming.html
@@ -7,7 +7,7 @@
 	</head>
 	<body>
 		<h1>Programming Projects</h1>
-		<table>
+		<table class="center_table">
 			<tr>
 				<th>Language</th>
 				<th>Project</th>
