--- a/techlab/current.html
+++ b/techlab/current.html
@@ -4,40 +4,16 @@
 <html>
 <head>
     <link type="text/css" rel="stylesheet" href="../style.css" />
-    <title>Rsync</title>
+    <title></title>
 </head>
 <body>
 <div id="wrapper">
     <div id="header">
         <h1>Hermann's Tech Lab</h1>
-        <h3>Using Rsync for backing up or transferring files.</h3>
+        <h3></h3>
     </div>
     <div id="content">
-        <p class="written">Rsync is a very useful program to backup files or even just for transferring them.
-            It verifies every operation using checksums, making sure that no data loss occurs during the data transfer.
-            This makes it superior to operations like mv.<br><br>
-            The basic syntax of an rsync command is as follows:<br><br>
-            <span class="code">rsync <span class="variable">options</span> <span class="variable">source</span> <span class="variable">destination</span></span><br>
-            The most important options are:</p>
-        <ul class="ul_in_text">
-            <li>-a    Archive Mode, should normally be used</li>
-            <li>-v    Verbose Mode, prints the perfrmed actions to the terminal</li>
-            <li>-n    Dry Run Mode, for testing. If this option is enabled, no changes will be made</li>
-            <li>--delete-after    Deleted files that don't exist in the source directory after the rsync command itself</li>
-        </ul>
-        <p class="written">Using rsync with a remote server, for instance via SSH, you'll need the following syntax:<br><br>
-            <span class="code"><span class="variable">user</span>@<span class="variable">server</span>:<span class="variable">path</span></span><br><br>
-            Use case Examples:<br><br>
-            Copying files from one local drive to another:<br>
-            <span class="code">rsync -av /mnt/disk1/folder/ /mnt/disk2/folder</span><br>
-            Backing up the Home drive to a NAS via SSH:<br>
-            <span class="code">rsync -av /home/user user@server:/mnt/disk/backups</span><br>
-            List files missing from your PC that are available on a remote server:<br>
-            <span class="code">rsync -anv user@server:/mnt/disk/secrets/ /home/user/secrets</span><br>
-            Synchronize a folder on a server with a local folder, making the remote folder the same as the local folder:<br>
-            <span class="code">rsync -anv --delete-after /home/user/stuff/ user@server:/mnt/disk/stuff</span><br><br>
-            Note that sometimes an "/" is appended to the end of a directory. If this is the case, the content of the directory is synced.
-            If the "/" is ommited, The folder itself is synced.
+        <p class="written">
         </p>
     </div>
     <div id="footer">
