Completed article on SSH key authentication and started article on Turbocash.

--- a/techlab/all_articles.html
+++ b/techlab/all_articles.html
@@ -14,6 +14,11 @@
         <th>Link</th>
     </tr>
     <tr>
+        <td>2015-08-21</td>
+        <td>Setting up SSH Key Authentication</td>
+        <td><a href="archive/2015-08-21-ssh_key_auth.html">View</a></td>
+    </tr>
+    <tr>
         <td>2015-08-20</td>
         <td>Using Rsync for backing up or transferring files</td>
         <td><a href="archive/2015-08-20-rsync.html">View</a></td>
@@ -43,7 +48,6 @@
         <td>Encrypting files with OpenSSL using public keys</td>
         <td><a href="archive/2015-08-18-openssl_encryption.html">View</a></td>
     </tr>
-
 </table>
 </body>
 </html>
