--- a/techlab/current.html
+++ b/techlab/current.html
@@ -4,16 +4,29 @@
 <html>
 <head>
     <link type="text/css" rel="stylesheet" href="../style.css" />
-    <title></title>
+    <title>Turbocash</title>
 </head>
 <body>
 <div id="wrapper">
     <div id="header">
         <h1>Hermann's Tech Lab</h1>
-        <h3></h3>
+        <h3>Running Turbocash and other frequency-dependent DOS programs on modern hardware</h3>
     </div>
     <div id="content">
-        <p class="written">
+        <p class="written">Legacy DOS applications can be a nightmare to run, especially so if they are dependent on
+            the frequency of the CPU. These programs will sometimes experience issues like "divided by zero"-errors
+            on modern hardware, because the CPU frequency is too high for the program to handle correctly.<br><br>
+            Turbocash, a DOS-based accounting program is one of these. There are several workarounds required to gain the
+            full functionality of the software on modern operating systems and hardware.<br><br>
+            What you'll need:</p>
+        <ul>
+            <li>An installation disk for Windows 98 SE or an ISO of it.</li>
+            <li>A valid Windows 98 SE license key</li>
+            <li><a href="http://home.arcor.de/h-a-l-9000/megabuild.html">DOSBox Megabuild</a></li>
+            <li><a href="https://www.virtualbox.org/">Virtualbox</a></li>
+            <li>A copy of Turbocash/the program required to run</li>
+        </ul>
+        <p class="written">To start
         </p>
     </div>
     <div id="footer">
@@ -21,7 +34,7 @@
             <a href="../index.html">Home</a>
         </div>
         <div id="left_down_0">
-            <a href="archive/2015-08-19-xdcc.html" class="bordered">Previous</a>
+            <a href="archive/2015-08-21-ssh_key_auth.html" class="bordered">Previous</a>
         </div>
         <div id="right_down_0">
             <a href="all_articles.html" class="bordered">All Articles</a>
