Created KIT Resources Page.

--- a/family_reports.html
+++ b/family_reports.html
@@ -6,7 +6,7 @@
     <title>Family Reports</title>
 </head>
 <body>
-    <h1>Family Report</h1>
+    <h1>Family Reports</h1>
     <p>All family reports are encrypted using OpenSSL. To see how to decrypt the files, refer
         to <a href="techlab/archive/2015-08-18-openssl_encryption.html" class="link">this</a>.<br>
         For access to the keys, contact <a href="mailto:hermann@krumreyh.com" class="link">Hermann Krumrey</a></p>
