--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<p>HTML and CSS Project!</p>
 		<ul class="ul_center">
 			<li><a href="programming/programming.html">Programming Projects</a></li>
-			<li><a href="http://la.krumreyh.com">Linear Algebra</a></li>
+			<li><a href="http://la.krumreyh.com">KIT Resources</a></li>
 			<li><a href="family_reports.html">Family Reports</a></li>
             <li><a href="techlab/current.html">Hermann's Tech Lab</a></li>
 			<!--li><a href="sftp://hermann@192.168.1.2/mnt/Main">SFTP NAS Access</a></li-->
