Created KIT Resources Page.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<head>
 		<link type="text/css" rel="stylesheet" href="style.css" />
 		<title>Home</title>
+		<meta charset="UTF-8">
 	</head>
 	<body>
 		<h1>Welcome!</h1>
@@ -11,7 +12,7 @@
 		<p>HTML and CSS Project!</p>
 		<ul class="ul_center">
 			<li><a href="programming/programming.html">Programming Projects</a></li>
-			<li><a href="http://la.krumreyh.com">KIT Resources</a></li>
+			<li><a href="kit_resources.html">KIT Resources</a></li>
 			<li><a href="family_reports.html">Family Reports</a></li>
             <li><a href="techlab/current.html">Hermann's Tech Lab</a></li>
 			<!--li><a href="sftp://hermann@192.168.1.2/mnt/Main">SFTP NAS Access</a></li-->
