--- a/kit_resources.html
+++ b/kit_resources.html
@@ -2,6 +2,7 @@
 
 <html>
 <head>
+    <meta charset="UTF-8">
     <link type="text/css" rel="stylesheet" href="style.css" />
     <title>KIT Resources</title>
 </head>
@@ -11,12 +12,34 @@
     <tr>
         <th>Subject</th>
         <th>Semester</th>
-        <th>Link</th>
     </tr>
     <tr>
-        <td>Algorithmen I</td>
+        <td><a href="https://krumreyh.asuscomm.com/index.php/s/K78YWeypOrCTl7K">Grundbegriffe der Informatik</a></td>
+        <td>2014 Winter</td>
+    </tr>
+    <tr>
+        <td><a href="https://krumreyh.asuscomm.com/index.php/s/sDPZcNTPo2J5jGK">Programmieren</a></td>
+        <td>2014 Winter</td>
+    </tr>
+    <tr>
+        <td><a href="https://krumreyh.asuscomm.com/index.php/s/jnwnNFaVQWH4SjC">Höhere Mathematik</a></td>
+        <td>2014 Winter / 2015 Sommer</td>
+    </tr>
+    <tr>
+        <td><a href="https://krumreyh.asuscomm.com/index.php/s/WDKCkBqpN0QqPzd">Lineare Algebra</a></td>
+        <td>2014 Winter / 2015 Sommer</td>
+    </tr>
+    <tr>
+        <td><a href="https://krumreyh.asuscomm.com/index.php/s/DHvPxkIGdGmb8P7">Algorithmen I</a></td>
         <td>2015 Sommer</td>
-        <td><a href="http://algo1.krumreyh.com">algo1.krumreyh.com</a></td>
+    </tr>
+    <tr>
+        <td><a href="">Technische Informatik II / Rechnerorganisation</a></td>
+        <td>2015 Sommer</td>
+    </tr>
+    <tr>
+        <td><a href="https://krumreyh.asuscomm.com/index.php/s/uGrUUOeO53UpAdy">Softwaretechnik</a></td>
+        <td>2015 Sommer</td>
     </tr>
 </table>
 </body>
