--- a/programming/programming.html
+++ b/programming/programming.html
@@ -23,11 +23,15 @@
 				<td><a href="java/batch-episode-renamer.html">Batch Episode Renamer</a></td>
 				<td>0.1</td>
 			</tr>
-
 			<tr>
 				<td>Java</td>
 				<td><a href="java/folder-icon-changer.html">Folder Icon Changer</a></td>
 				<td>0.1</td>
+			</tr>
+			<tr>
+				<td>C++</td>
+				<td><a href="c++/xdcc-download.html">XDCC Downloader</a></td>
+				<td>1.0</td>
 			</tr>
 		</table>
 	</body>
