Continued DOS Legacy article and added programming museum.

--- a/techlab/current.html
+++ b/techlab/current.html
@@ -10,7 +10,7 @@
 <div id="wrapper">
     <div id="header">
         <h1>Hermann's Tech Lab</h1>
-        <h3>Running Turbocash and other frequency-dependent DOS programs on modern hardware</h3>
+        <h3>Running Turbocash on modern hardware</h3>
     </div>
     <div id="content">
         <p class="written">Legacy DOS applications can be a nightmare to run, especially so if they are dependent on
@@ -53,7 +53,10 @@
             <li>Confirm the selections</li>
             <li>Restart the Virtual Machine</li>
         </ol>
-        <p class="written">
+        <p class="written">Now, we'll have to install the software CPUKiller. The newest version is 3.0 and requires a
+            license, but older versions of the software work just as well and are as far as I can tell free to use.<br>
+            This software enables you to slow down the CPU, which will be necessary to run Turbocash.<br><br>
+
         </p>
     </div>
     <div id="footer">
