--- a/programming/programming.html
+++ b/programming/programming.html
@@ -34,5 +34,6 @@
 				<td>1.0</td>
 			</tr>
 		</table>
+		<p>For horrible programming abominations visit the <a class="link" href="museum/museum.html">museum</a>.</p>
 	</body>
 </html>
