--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<ul class="ul_center">
 			<li><a href="programming/programming.html">Programming Projects</a></li>
 			<li><a href="kit_resources.html">KIT Resources</a></li>
+			<li><a href="kit/pse/pse.html">PSE</a></li>
 			<li><a href="family_reports.html">Family Reports</a></li>
             <li><a href="techlab/current.html">Hermann's Tech Lab</a></li>
 			<!--li><a href="sftp://hermann@192.168.1.2/mnt/Main">SFTP NAS Access</a></li-->
