--- a/family_reports.html
+++ b/family_reports.html
@@ -19,107 +19,107 @@
         <tr>
             <td>German</td>
             <td>2003</td>
-            <td><a href="resources/family_reports/2003-ger.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2003-ger.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>German</td>
             <td>2004</td>
-            <td><a href="resources/family_reports/2004-ger.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2004-ger.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>German</td>
             <td>2005</td>
-            <td><a href="resources/family_reports/2005-ger.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2005-ger.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>English</td>
             <td>2005</td>
-            <td><a href="resources/family_reports/2005-en.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2005-en.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>German</td>
             <td>2006</td>
-            <td><a href="resources/family_reports/2006-ger.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2006-ger.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>English</td>
             <td>2006</td>
-            <td><a href="resources/family_reports/2006-en.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2006-en.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>German</td>
             <td>2007</td>
-            <td><a href="resources/family_reports/2007-ger.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2007-ger.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>English</td>
             <td>2007</td>
-            <td><a href="resources/family_reports/2007-en.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2007-en.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>German</td>
             <td>2008</td>
-            <td><a href="resources/family_reports/2008-ger.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2008-ger.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>English</td>
             <td>2008</td>
-            <td><a href="resources/family_reports/2008-en.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2008-en.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>German</td>
             <td>2009</td>
-            <td><a href="resources/family_reports/2009-ger.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2009-ger.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>English</td>
             <td>2009</td>
-            <td><a href="resources/family_reports/2009-en.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2009-en.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>German</td>
             <td>2010</td>
-            <td><a href="resources/family_reports/2010-ger.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2010-ger.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>English</td>
             <td>2010</td>
-            <td><a href="resources/family_reports/2010-en.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2010-en.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>German</td>
             <td>2011</td>
-            <td><a href="resources/family_reports/2011-ger.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2011-ger.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>English</td>
             <td>2011</td>
-            <td><a href="resources/family_reports/2011-en.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2011-en.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>German</td>
             <td>2012</td>
-            <td><a href="resources/family_reports/2012-ger.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2012-ger.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>English</td>
             <td>2012</td>
-            <td><a href="resources/family_reports/2012-en.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2012-en.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>German</td>
             <td>2013</td>
-            <td><a href="resources/family_reports/2013-ger.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2013-ger.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>English</td>
             <td>2013</td>
-            <td><a href="resources/family_reports/2013-en.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/2013-en.pdf.enc" download target="_blank">Download</a></td>
         </tr>
         <tr>
             <td>German</td>
             <td>All</td>
-            <td><a href="resources/family_reports/all-ger.pdf.enc">Download</a></td>
+            <td><a href="resources/family_reports/all-ger.pdf.enc" download target="_blank">Download</a></td>
         </tr>
     </table>
 </body>
