--- a/kit/pse/pse.html
+++ b/kit/pse/pse.html
@@ -7,12 +7,38 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <h1>Praxis der Softwareentwicklung</h1>
-    <p>Resourcensammlung</p><ul class="ul_center">
-        <li><a href="https://docs.google.com/document/d/1zm-ywzVBd7IVsmgdJhZhFqGYTW9VEaik5fsMr0zue3c/edit">Erstes Pflichtenheft</a></li>
-        <li><a href="https://docs.google.com/document/d/1xYSZCS_6hnKHYHymXSZEl5JxTkgJGMdQe4VMHI1mdRs/edit#heading=h.9pvt9vs2t9kp">Zweites Pflichtenheft</a></li>
-        <li><a href="https://docs.google.com/document/d/15PBiJwcyz4qqdJAsnnzz7JY33253Vl922pIxb2CCZRg/edit">TODO Document</a></li>
-        <li><a href="../../resources/kit/pse/unified_automation_opc_ua_demo.iso">Unified Automation OPC UA Demo</a></li>
-    </ul>
+<div id="wrapper">
+    <div id="header">
+        <h1>Praxis der Softwareentwicklung</h1>
+        <p>Resourcensammlung</p>
+    </div>
+    <div id="content">
+        <h3>Generell</h3>
+        <ul class="ul_center">
+            <li><a href="../../resources/kit/pse/pse_präsentationsfolien.pdf"></a>PSE Vorstellungspräsentation</li>
+            <li><a href="../../resources/kit/pse/pse_inhalte.docx"></a>PSE Inhalte</li>
+            <li><a href="../../resources/kit/pse/industrie4.0fabrik.xml"></a>Industrie 4.0 Beispiel XML</li>
+            <li><a href="../../resources/kit/pse/miriam_schleipen_doktorarbeit.pdf"></a>Doktorarbeit Miriam Schleipen</li>
+            <li><a href="../../resources/kit/pse/unified_automation_opc_ua_demo.iso">Unified Automation OPC UA Demo</a></li>
+        </ul>
+        <hr class="divider">
+        <h3>Pflichtenheft</h3>
+        <ul class="ul_center">
+            <li>Google Docs</li>
+            <ul class="ul_center">
+                <li><a href="https://docs.google.com/document/d/1zm-ywzVBd7IVsmgdJhZhFqGYTW9VEaik5fsMr0zue3c/edit">Erstes Pflichtenheft</a></li>
+                <li><a href="https://docs.google.com/document/d/1xYSZCS_6hnKHYHymXSZEl5JxTkgJGMdQe4VMHI1mdRs/edit#heading=h.9pvt9vs2t9kp">Zweites Pflichtenheft</a></li>
+                <li><a href="https://docs.google.com/document/d/15PBiJwcyz4qqdJAsnnzz7JY33253Vl922pIxb2CCZRg/edit">TODO Document</a></li>
+            </ul>
+            <li><a href="https://github.com/CVVisualPSETeam/Dokumente/blob/master/Lastenheft/lastenheft_v1.pdf">Referenzlastenheft</a></li>
+        </ul>
+        <hr class="divider">
+        <h3>Entwurf</h3>
+        <hr class="divider">
+        <h3>Implementierung</h3>
+    </div>
+    <div id="footer">
+    </div>
+</div>
 </body>
 </html>
