--- a/kit/pse/pse.html
+++ b/kit/pse/pse.html
@@ -15,10 +15,10 @@
     <div id="content">
         <h3>Generell</h3>
         <ul class="ul_center">
-            <li><a href="../../resources/kit/pse/pse_präsentationsfolien.pdf"></a>PSE Vorstellungspräsentation</li>
-            <li><a href="../../resources/kit/pse/pse_inhalte.docx"></a>PSE Inhalte</li>
-            <li><a href="../../resources/kit/pse/industrie4.0fabrik.xml"></a>Industrie 4.0 Beispiel XML</li>
-            <li><a href="../../resources/kit/pse/miriam_schleipen_doktorarbeit.pdf"></a>Doktorarbeit Miriam Schleipen</li>
+            <li><a href="../../resources/kit/pse/pse_präsentationsfolien.pdf">PSE Vorstellungspräsentation</a></li>
+            <li><a href="../../resources/kit/pse/pse_inhalte.docx">PSE Inhalte</a></li>
+            <li><a href="../../resources/kit/pse/industrie4.0fabrik.xml">Industrie 4.0 Beispiel XML</a></li>
+            <li><a href="../../resources/kit/pse/miriam_schleipen_doktorarbeit.pdf">Doktorarbeit Miriam Schleipen</a></li>
             <li><a href="../../resources/kit/pse/unified_automation_opc_ua_demo.iso">Unified Automation OPC UA Demo</a></li>
         </ul>
         <hr class="divider">
