--- a/index.html
+++ b/index.html
@@ -7,16 +7,22 @@
 		<meta charset="UTF-8">
 	</head>
 	<body>
+	<div id="basic_wrapper">
+        <div id="basic_header">
 		<h1>Welcome!</h1>
-		<p>This is Hermann Krumrey's personal little</p>
-		<p>HTML and CSS Project!</p>
+        </div>
+        <div id="basic_content">
+		<p>This is Hermann Krumrey's personal little<br>HTML and CSS Project!</p>
 		<ul class="ul_center">
 			<li><a href="programming/programming.html">Programming Projects</a></li>
 			<li><a href="kit_resources.html">KIT Resources</a></li>
 			<li><a href="kit/pse/pse.html">PSE</a></li>
 			<li><a href="family_reports.html">Family Reports</a></li>
             <li><a href="techlab/current.html">Hermann's Tech Lab</a></li>
-			<!--li><a href="sftp://hermann@192.168.1.2/mnt/Main">SFTP NAS Access</a></li-->
 		</ul>
+        </div>
+        <div id="basic_footer">
+        </div>
+    </div>
 	</body>
 </html>
