Minor edits. (Yeah I know that's the most useful commit ever, deal with it)
Former-commit-id: 6eb9a21b6b0141f173f91e277915c4dc441eb378

--- a/kit/pse/pse.html
+++ b/kit/pse/pse.html
@@ -29,6 +29,7 @@
                 <li><a href="https://docs.google.com/document/d/1zm-ywzVBd7IVsmgdJhZhFqGYTW9VEaik5fsMr0zue3c/edit">Erstes Pflichtenheft</a></li>
                 <li><a href="https://docs.google.com/document/d/1xYSZCS_6hnKHYHymXSZEl5JxTkgJGMdQe4VMHI1mdRs/edit#heading=h.9pvt9vs2t9kp">Zweites Pflichtenheft</a></li>
                 <li><a href="https://docs.google.com/document/d/15PBiJwcyz4qqdJAsnnzz7JY33253Vl922pIxb2CCZRg/edit">TODO Document</a></li>
+                <li><a href="https://docs.google.com/document/d/1CN7nwIrQiagFN9ZNDKpEFjusnPRLInnv244KHvIJmDs/edit#">Erster Abgabeentwurf</a></li>
             </ul>
             <li><a href="https://github.com/CVVisualPSETeam/Dokumente/blob/master/Lastenheft/lastenheft_v1.pdf">Referenzlastenheft</a></li>
         </ul>
