--- a/programming/museum/ahk/mirc-xdcc-downloader.html
+++ b/programming/museum/ahk/mirc-xdcc-downloader.html
@@ -32,7 +32,7 @@
         </tr>
         <tr>
             <td><a href="../../../resources/museum/ahk/mirc-download.ahk">Download</a></td>
-            <td>None</td>
+            <td><a href="../../../resources/museum/ahk/mirc_download.zip">Download</a></td>
         </tr>
     </table>
     <p><br></p>
