--- a/programming/museum/museum.html
+++ b/programming/museum/museum.html
@@ -21,5 +21,6 @@
             <td><a href="c/ultimate-calculator-project.html">"Ultimate" Calculator Project</a></td>
         </tr>
     </table>
+    <img class ="xkcd" src="http://imgs.xkcd.com/comics/code_quality.png">
 </body>
 </html>
