Fixed Title in XDCC Downloader page and added PSE google drive folder.
Former-commit-id: 87a7d9ca67e830e323b177105c3c3ab14c29e56b

--- a/programming/c++/xdcc-download.html
+++ b/programming/c++/xdcc-download.html
@@ -6,7 +6,7 @@
     <title>XDCC Downloader</title>
 </head>
 <body>
-<h1>XDC Downloader</h1>
+<h1>XDCC Downloader</h1>
 <p>Program that offers extensive downloading capabilities for XDCC</p>
 
 <table class="center_table">
