Started Whatsapp Bot Page.
Former-commit-id: fe3df837dff8ad548d48bfc992ff157f1e8a3fa9

--- a/programming/c++/xdcc-download.html
+++ b/programming/c++/xdcc-download.html
@@ -6,25 +6,32 @@
     <title>XDCC Downloader</title>
 </head>
 <body>
-<h1>XDCC Downloader</h1>
-<p>Program that offers extensive downloading capabilities for XDCC</p>
-
-<table class="center_table">
-    <tr>
-        <th>Version</th>
-        <th>Dependencies</th>
-        <th>Git Repository URI</th>
-    </tr>
-    <tr>
-        <td><a href="../../resources/c++/xdcc-download-linuxx64-1.0">Linux x64 - 1.0 (Current)</a></td>
-        <td></td>
-        <td>ssh://hermann@krumreyh.asuscomm.com:9002/mnt/Main/Programming/Git Repositories/C++/xdcc-download</td>
-    </tr>
-    <tr>
-        <td><a href="../../resources/c++/xdcc-download-linuxARM-1.0">Linux ARM - 1.0 (Current)</a></td>
-        <td></td>
-        <td>ssh://hermann@krumreyh.asuscomm.com:9002/mnt/Main/Programming/Git Repositories/C++/xdcc-download</td>
-    </tr>
-</table>
+    <div id="wrapper">
+        <div id="header">
+            <h1>XDCC Downloader</h1>
+            <p>Program that offers extensive downloading capabilities for XDCC</p>
+        </div>
+        <div id="content">
+            <table class="center_table">
+                <tr>
+                    <th>Version</th>
+                    <th>Dependencies</th>
+                    <th>Git Repository URI</th>
+                </tr>
+                <tr>
+                    <td><a href="../../resources/c++/xdcc-download-linuxx64-1.0">Linux x64 - 1.0 (Current)</a></td>
+                    <td></td>
+                    <td>ssh://hermann@krumreyh.asuscomm.com:9002/mnt/Main/Programming/Git Repositories/C++/xdcc-download</td>
+                </tr>
+                <tr>
+                    <td><a href="../../resources/c++/xdcc-download-linuxARM-1.0">Linux ARM - 1.0 (Current)</a></td>
+                    <td></td>
+                    <td>ssh://hermann@krumreyh.asuscomm.com:9002/mnt/Main/Programming/Git Repositories/C++/xdcc-download</td>
+                </tr>
+            </table>
+        </div>
+        <div id="footer">
+        </div>
+    </div>
 </body>
 </html>
