Gimped the programming page.
Former-commit-id: 63cd67e8f2ad35aae8a237b75be55b160aad36d6

--- a/programming/programming.html
+++ b/programming/programming.html
@@ -1,44 +1,20 @@
 <!DOCTYPE html>
 
 <html>
-	<head>
-		<link type="text/css" rel="stylesheet" href="../style.css">
-		<title>Programming Projects</title>
-	</head>
-	<body>
-		<h1>Programming Projects</h1>
-		<table class="center_table">
-			<tr>
-				<th>Language</th>
-				<th>Project</th>
-				<th>Version</th>
-			</tr>
-			<tr>
-				<td>Java</td>
-				<td><a href="java/krumreylib.html">Krumreylib</a></td>
-				<td>0.3</td>
-			</tr>
-			<tr>
-				<td>Java</td>
-				<td><a href="java/batch-episode-renamer.html">Batch Episode Renamer</a></td>
-				<td>0.1</td>
-			</tr>
-			<tr>
-				<td>Java</td>
-				<td><a href="java/folder-icon-changer.html">Folder Icon Changer</a></td>
-				<td>0.1</td>
-			</tr>
-			<tr>
-				<td>C++</td>
-				<td><a href="c++/xdcc-download.html">XDCC Downloader</a></td>
-				<td>1.0</td>
-			</tr>
-			<tr>
-				<td>Python</td>
-				<td><a href="python/whatsapp-bot.html">Whatsapp Bot</a></td>
-				<td>0.1</td>
-			</tr>
-		</table>
-		<p>For horrible programming abominations visit the <a class="link" href="museum/museum.html">museum</a>.</p>
-	</body>
+<head>
+	<link type="text/css" rel="stylesheet" href="../style.css">
+	<title>Programming Projects</title>
+</head>
+<body>
+<h1>Programming Projects</h1>
+<p><a class="link" href="http://gitlab.namibsun.net">Gitlab</a></p>
+<table class="center_table">
+	<tr>
+		<th>Statistics</th>
+	</tr>
+	<tr>
+		<td><a class="link" href="../../git_stats_pages/media-manager/index.html">media-manager</a></td>
+	</tr>
+</table>
+</body>
 </html>
