Added more projects statistics links.
Former-commit-id: 9fe3c81ff93bbfd7efac4769f8579fbe9bafda52

--- a/programming/programming.html
+++ b/programming/programming.html
@@ -7,13 +7,19 @@
 </head>
 <body>
 <h1>Programming Projects</h1>
-<p><a class="link" href="http://gitlab.namibsun.net">Gitlab</a></p>
+<p><a class="link" href="http://gitlab.namibsun.net">Gitlab Home</a></p>
 <table class="center_table">
 	<tr>
 		<th>Statistics</th>
 	</tr>
 	<tr>
 		<td><a class="link" href="../../git_stats_pages/media-manager/index.html">media-manager</a></td>
+	</tr>
+	<tr>
+		<td><a class="link" href="../../git_stats_pages/finance-manager/index.html">finance-manager</a></td>
+	</tr>
+	<tr>
+		<td><a class="link" href="../../git_stats_pages/whatsapp-bot/index.html">whatsbot</a></td>
 	</tr>
 </table>
 </body>
